featured flower and service info added

--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,89 @@
     border-radius: 8px;
     padding: 12px 18px;
 }
+
+.featured-flower{
+    margin-bottom: 60px;
+}
+
+.featured-flower-title{
+    font-size: 30px;
+    text-align: center;
+    margin: 120px 0 30px;
+}
+
+.featured-flower-boody{
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.featured-flower-photos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    gap: 30px;
+}
+
+.featured-flower-image{
+    padding: 40px;
+    border-radius: 140px 140px 0 0;
+}
+
+.ff-img-1{
+    background-color: #f1afbd;
+    width: 220px;
+    height: 328px;
+}
+
+.ff-img-2{
+    background-color: #a6e7f6;
+    width: 220px;
+    height: 328px;
+    right: 550px;
+}
+
+.ff-img-3{
+    background-color: #a0f6a0; 
+    width: 220px;
+    height: 328px; 
+}
+
+.service-info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    margin-top: 120px;
+    background-color: rgb(245, 236, 225);
+    padding: 40px;
+    margin-left: 250px;
+    margin-right: 250px;
+}
+
+.hot-deal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.hot-deal-text h3{
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.hot-deal-text p{
+    font-size: 16px;
+    text-align: center;
+}
+
+.hot-deal-text button{
+    text-align: center;
+}
+
+
+
+
