--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,13 @@
     height: 400px;
 }
 
-
+.instagram-photos{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 30px; 
+    margin-bottom: 60px;
+}
 
 
 
