--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,47 @@
     gap: 10px;
     margin-top: 30px; 
     margin-bottom: 60px;
+    margin: 30px 180px 60px 180px;
 }
+
+.subscribe{
+    background-image: url('../images/Flower Asset/Rectangle 9.png'); 
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1260px;
+    height: 500px;
+}
+
+.latest-deals{
+    padding: 160px 0 0 0;
+    text-align: center; 
+}
+
+.latest-deals h2{
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.subscribe-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 80px;
+}
+
+.subscribe-body input[type=email]{
+    font-size: 18px;
+    width: 50%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border-radius: 7px;
+    background-color: azure;
+}
+
 
 
 
