--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@
     cursor: pointer;
 }
 
+.btn-primary:hover{
+    background-color: azure;
+    color: #E55473;
+    box-shadow: 0 0 1px 2px #E55473;
+}
+
 .featured-flower{
     margin-bottom: 60px;
 }
@@ -155,7 +161,12 @@
     gap: 10px;
     margin-top: 30px; 
     margin-bottom: 60px;
-    margin: 30px 180px 60px 180px;
+    margin: 30px 240px 60px 240px;
+}
+
+.instagram-img{
+    width: 300px;
+    height: auto;
 }
 
 .subscribe{
@@ -165,7 +176,7 @@
     background-position: center;
     margin-left: auto;
     margin-right: auto;
-    width: 1260px;
+    width: 1240px;
     height: 500px;
 }
 
@@ -196,6 +207,35 @@
     background-color: azure;
 }
 
+.subscribe-body input[type=email]:focus{
+    box-shadow: 0 0 1px 2px #E55473;
+}
+
+.footer{
+    text-align: center;
+    background-color: black;
+    color: azure;
+}
+
+.footer span{
+    color: #E55473;
+}
+
+.footer-title{
+    padding-top: 120px;
+    margin-bottom: 30px;
+}
+
+.footer-text{
+    font-size: 18px;
+}
+
+.copyright-text{
+    color: gray;
+    font-size: 14px;
+    margin-top: 30px;
+    padding-bottom: 120px;
+}
 
 
 
