--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     justify-content: space-around;
     align-items: center;
     background: rgba(229, 84, 115, 0.10);
+    height: 100vh;
 }
 
 .banner-text{
@@ -29,12 +30,12 @@
 
 .banner-photo{
     margin-right: 120px;
-    margin-top: 20px;
+    margin-top: 90px;
 }
 
 .banner-img{
-    width: 400px;
-    height: 500px;
+    width: 500px;
+    height: auto;
 }
 
 .btn-primary{
@@ -65,7 +66,7 @@
 .featured-flower-boody{
     font-size: 16px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .featured-flower-photos{
@@ -106,10 +107,25 @@
     align-items: center;
     gap: 60px;
     margin-top: 120px;
-    background-color: rgb(245, 236, 225);
-    padding: 40px;
+    background-color: rgb(245, 242, 237);
+    padding: 50px;
     margin-left: 250px;
     margin-right: 250px;
+}
+
+.service-img1{
+    margin-left: 80px;
+    margin-bottom: 10px;
+}
+
+.service-img2{
+    margin-left: 80px;
+    margin-bottom: 10px;
+}
+
+.service-img3{
+    margin-left: 30px;
+    margin-bottom: 10px;
 }
 
 .hot-deal{
