--- a/css/style.css
+++ b/css/style.css
@@ -113,19 +113,10 @@
     margin-right: 250px;
 }
 
-.service-img1{
-    margin-left: 80px;
-    margin-bottom: 10px;
-}
-
-.service-img2{
-    margin-left: 80px;
-    margin-bottom: 10px;
-}
-
-.service-img3{
-    margin-left: 30px;
-    margin-bottom: 10px;
+.service-img{
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 .hot-deal{
