--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,9 @@
 /* banner related styles */
 .banner-content{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 60px;
     background: rgba(229, 84, 115, 0.10);
     height: fit-content;
 }
@@ -30,12 +31,12 @@
 
 .banner-photo{
     margin-right: 120px;
-    margin-top: 70px;
+    margin-top: 80px;
 }
 
 .banner-img{
     width: 500px;
-    height: fit-content;
+    height: auto;   
 }
 /* common button style */
 .btn-primary{
@@ -44,7 +45,7 @@
     font-size: 16px;
     border-radius: 8px;
     padding: 12px 18px;
-    cursor: pointer;
+    cursor: pointer; 
 }
 
 .btn-primary:hover{
